# pdrf

./: .gitignore  README.md  compose.yaml  justfile  pyproject.toml
api/: main.py
core/pdrf/: pdr_flow.py
core/pdrf/crews/pdr/: crew.py
core/pdrf/crews/pdr/config/: agents.yaml
deployment/dev/: dev.Dockerfile  start.sh
extras/: test.http
src/pdrf/: main.py  main_bkp.py
src/pdrf/crews/pdr/: crew.py  main.py
src/pdrf/crews/pdr/config/: agents.yaml  tasks.yaml
