[project]
name = "pdrf"
version = "0.1.0"
description = "pdrf using crewAI"
authors = [{ name = "Pedro Campos", email = "pcampos119104@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.7.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
kickoff = "pdrf.main:kickoff"
run_crew = "pdrf.main:kickoff"
plot = "pdrf.main:plot"
run_with_trigger = "pdrf.main:run_with_trigger"
api = "pdrf.main:run_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
