[project]
name = "pdrf"
version = "0.1.0"
description = "pdrf using crewAI"
authors = [{ name = "Pedro Campos", email = "pcampos119104@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=1.7.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "xonsh>=0.19.9",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[dependency-groups]
dev = [
    "marimo>=0.19.11",
]

[tool.uv]
package = false

